[package]
name = "ritlers"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }

[dev-dependencies]
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "macros", "test-util", "rt-multi-thread"]}
