[package]
name = "ritlers"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "A task-length aware rate limiter that waits for tasks to finish before counting them against the rate limit"
readme = "README.md"
repository = "https://github.com/Florisheinen1/ritlers"
license = "MIT OR Apache-2.0"
keywords = ["rate-limiter", "rate-limit", "retry", "async", "tokio"]
categories = ["web-programming::http-client", "concurrency", "asynchronous"]

[lints.rust]
unsafe_code = "forbid"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["blocking"]
blocking = []
async = ["dep:tokio"]

[dependencies]
tokio = { version = "1", optional = true, features = ["rt", "sync", "time", "macros"] }

[dev-dependencies]
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "test-util", "rt-multi-thread"] }

[[example]]
name = "example_async"
required-features = ["async"]
[[example]]
name = "example_dogs"
required-features = ["async"]
[[example]]
name = "example_retry_async"
required-features = ["async"]
